# pydistribution

./: CHANGELOG.md  README.md  pyproject.toml  release_maker_cfg.json
deprecated/: Untitled.ipynb  testing.ipynb  utils.py
deprecated/docs/source/: api.rst  conf.py  index.rst
deprecated/docs/source/_templates/: custom-module-template.rst
src/pydistribution/: distribution.py  distributions.py  random.py
